fix z-index issue

--- a/project1/style.scss
+++ b/project1/style.scss
@@ -24,7 +24,7 @@ h1 {
 }
 
 .gl-container {
-    z-index: -1;
+    z-index: 1;
     background-color: black;
     display: flex;
     align-items: center;
@@ -32,6 +32,7 @@ h1 {
 }
 
 .ui-container {
+    z-index: 2;
     color: white;
     pointer-events: none;
     padding: 5px;
